--- a/microservicios/orders-service/package.json
+++ b/microservicios/orders-service/package.json
@@ -10,6 +10,6 @@
         "axios": "^1.6.2",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
-        "pg": "^8.11.3"
+        "mysql2": "^3.6.0"
     }
 }
